# auto-mode

./: README.md  pyproject.toml
auto_mode/: __init__.py  main.py  suntime.py
